--- a/_style/mcmaster.yml
+++ b/_style/mcmaster.yml
@@ -5,7 +5,9 @@ page:
   size: Letter
 
 base:
-  font_size: 10
+  line-height:  1.1
+  font_size:    10
+  font-family:  Noto Serif
 
 link:
   font_color: #AC1455
@@ -15,7 +17,7 @@ heading:
   font-size: 17
   font-style: bold
   line-height: 1.2
-  margin-bottom: 10
+  margin-bottom: 5
   h3-font-color: #AC1455
   h5-font-color: #AC1455
 
@@ -31,6 +33,7 @@ title_page:
 
 image:
   caption:
+    font-size: 9
     align: inherit
 
 role:
@@ -56,10 +59,21 @@ footer:
       content: 'image:license.png[pdfwidth=7.5%]'
 
 toc:
-  line-height:    1.40
+  line-height:    1.2
   h2-font-color:  #7A003C
   h2-font-style:  bold
   h3-font-color:  #AC1455
   h3-font-style:  italic
   
+list:
+  item_spacing: 1
 
+table:
+  caption:
+    font-size: 9
+
+code:
+  font-size:    9
+  line-height:  1.05
+  caption:
+    font-size:  9
