--- a/.github/workflows/init.yaml
+++ b/.github/workflows/init.yaml
@@ -6,11 +6,14 @@ on:
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  M1: "2025-10-13T03:59:59.0Z"
+  # Fall 2025 deadlines for milestones (23:59 Toronto --> 03:59 UTC)
+  M1:    "2025-10-13T03:59:59.0Z"
+  M2:    "2025-11-10T03:59:59.0Z"
+  FINAL: "2025-12-05T03:59:59.0Z"
   
 jobs:
   init-milestones:
-    # Fall 2025 deadlines for milestones (23:59 Toronto --> 03:59 UTC)
+
     runs-on: ubuntu-latest
     steps:
       - name: Create Milestone 1
@@ -19,7 +22,7 @@ jobs:
             repos/${{ github.repository }}/milestones \
             -f title="Milestone 1" \
             -f state="open" \
-            -f description="First milestone" \
+            -f description="First Window of Opportunity for feedback" \
             -f due_on="${{ env.M1 }}"
 
       - name: Create Milestone 2
@@ -28,14 +31,14 @@ jobs:
             repos/${{ github.repository }}/milestones \
             -f title="Milestone 2" \
             -f state="open" \
-            -f description="Second milestone" \
-            -f due_on="2025-11-10T03:59:59.0Z"
+            -f description="Second Window of Opportunity for feedback" \
+            -f due_on="${{ env.M2 }}"
 
       - name: Create Milestone 3
         run: |
           gh api \
             repos/${{ github.repository }}/milestones \
-            -f title="Milestone 3" \
+            -f title="Final Delivery" \
             -f state="open" \
-            -f description="Third milestone" \
-            -f due_on="2025-12-05T03:59:59.0Z"
+            -f description="Delivery of the complete document" \
+            -f due_on="${{ env.FINAL }}"
