--- a/.github/workflows/init.yaml
+++ b/.github/workflows/init.yaml
@@ -66,8 +66,7 @@ jobs:
           echo "m1=$M1" >> $GITHUB_OUTPUT
           echo "m2=$M2" >> $GITHUB_OUTPUT
           echo "m3=$M3" >> $GITHUB_OUTPUT
-
-
+  
   init-goal-book:
     runs-on: ubuntu-latest
     needs: get-milestones
@@ -76,6 +75,12 @@ jobs:
       MILESTONE_2: ${{ needs.get-milestones.outputs.milestone2 }}
       MILESTONE_3: ${{ needs.get-milestones.outputs.milestone3 }}
     steps:
+      - name: Create Goal tag
+        run: |
+          gh api repos/${{ github.repository }}/labels \
+                -f name="goal" \
+                -f color="09630F" \
+                -f description="Goal-related tasks"
       - name: Create G1
         run: |
           # Create the issue and capture its number
