--- a/.github/workflows/init.yaml
+++ b/.github/workflows/init.yaml
@@ -11,6 +11,8 @@ permissions:
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  PROJECT_TPL_OWNER: "ace-lectures"
+  PROJECT_TPL_ID:    "4"
   # Fall 2025 deadlines for milestones (23:59 Toronto --> 03:59 UTC)
   M1_DUE:    "2025-10-13T03:59:59.0Z"
   M2_DUE:    "2025-11-10T03:59:59.0Z"
@@ -66,10 +68,50 @@ jobs:
           echo "m1=$M1" >> $GITHUB_OUTPUT
           echo "m2=$M2" >> $GITHUB_OUTPUT
           echo "m3=$M3" >> $GITHUB_OUTPUT
+
+  create-project:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Create Project from Template
+        run: |
+          TEMPLATE_OWNER="${{ env.PROJECT_TPL_OWNER }}"
+          TEMPLATE_PROJECT_NUMBER=${{ env.PROJECT_TPL_ID }}
+          REPO_NAME="${{ github.event.repository.name }}"
+          NEW_PROJECT_NAME="$REPO_NAME Project"
+
+          # Get the template project ID
+          TEMPLATE_PROJECT_ID=$(gh api graphql -f query='
+            query($owner:String!, $number:Int!) {
+              organization(login:$owner) {
+                projectNext(number:$number) { id title }
+              }
+            }' -F owner="$TEMPLATE_OWNER" -F number=$TEMPLATE_PROJECT_NUMBER \
+            | jq -r '.data.organization.projectNext.id')
+
+          echo "Template project ID: $TEMPLATE_PROJECT_ID"
+
+          # Get repository ID
+          REPO_ID=$(gh api graphql -f query='
+            query($owner:String!, $name:String!) {
+              repository(owner:$owner, name:$name) { id }
+            }' -F owner="${{ github.repository_owner }}" -F name="$REPO_NAME" \
+            | jq -r '.data.repository.id')
+
+          # Create new project from template
+          NEW_PROJECT_ID=$(gh api graphql -f query='
+            mutation($input: CreateProjectNextFromTemplateInput!) {
+              createProjectNextFromTemplate(input: $input) {
+                projectNext { id title }
+              }
+            }' \
+            -F input="{\"repositoryId\":\"$REPO_ID\",\"templateId\":\"$TEMPLATE_PROJECT_ID\",\"name\":\"$NEW_PROJECT_NAME\"}" \
+            | jq -r '.data.createProjectNextFromTemplate.projectNext.id')
+
+          echo "New project ID: $NEW_PROJECT_ID"
   
   init-goal-book:
     runs-on: ubuntu-latest
-    needs: get-milestones
+    needs: [get-milestones,create-project]
     env:
       MILESTONE_1: ${{ needs.get-milestones.outputs.milestone1 }}
       MILESTONE_2: ${{ needs.get-milestones.outputs.milestone2 }}
